<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  >

  <com.fredporciuncula.phonemoji.PhonemojiFlagTextView
    android:id="@+id/flagTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:phonemoji_flagFor="@id/plainEditText"
    />

  <com.fredporciuncula.phonemoji.PhonemojiTextInputEditText
    android:id="@+id/plainEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp"
    />

  <com.fredporciuncula.phonemoji.PhonemojiTextInputEditText
    android:id="@+id/editTextWithInitialRegionCodeDE"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp"
    app:phonemoji_initialRegionCode="DE"
    />

  <com.fredporciuncula.phonemoji.PhonemojiTextInputEditText
    android:id="@+id/editTextWithInitialCountryCode55"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp"
    app:phonemoji_initialCountryCode="55"
    />

  <com.fredporciuncula.phonemoji.PhonemojiTextInputLayout
    android:id="@+id/textInputLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp"
    >

    <com.fredporciuncula.phonemoji.PhonemojiTextInputEditText
      android:id="@+id/editTextWithinTextInputLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      />

  </com.fredporciuncula.phonemoji.PhonemojiTextInputLayout>

  <com.fredporciuncula.phonemoji.PhonemojiTextInputLayout
    android:id="@+id/textInputLayoutWithNoFlag"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp"
    app:phonemoji_showFlag="false"
    >

    <com.fredporciuncula.phonemoji.PhonemojiTextInputEditText
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      />

  </com.fredporciuncula.phonemoji.PhonemojiTextInputLayout>

  <com.fredporciuncula.phonemoji.PhonemojiTextInputLayout
    android:id="@+id/textInputLayoutWithInitialInput"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp"
    >

    <com.fredporciuncula.phonemoji.PhonemojiTextInputEditText
      android:id="@+id/editTextWithInitialInput"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="32dp"
      app:phonemoji_initialCountryCode="41"
      />

  </com.fredporciuncula.phonemoji.PhonemojiTextInputLayout>

  <com.fredporciuncula.phonemoji.PhonemojiFlagTextView
    android:id="@+id/flagTextViewForEditTextWithInitialInput"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp"
    app:phonemoji_flagFor="@id/editTextWithInitialInput"
    />

</LinearLayout>
